--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "next": "15.0.2",
     "react": "^18.3.1",
+    "react-animate-height": "^3.2.3",
     "react-dom": "^18.3.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
